Feat: User Fetch Endpoint
