# backend/src/models/userModel.ts
@@ -1,3 +1,81 @@
+/**
+ * @swagger
+ * components:
+ *   schemas:
+ *     UserStatus:
+ *       type: string
+ *       enum:
+ *         - active
+ *         - inactive
+ *         - suspended
+ *     UserModel:
+ *       type: object
+ *       properties:
+ *         id:
+ *           type: integer
+ *         name:
+ *           type: string
+ *         email:
+ *           type: string
+ *         mobile_no:
+ *           type: string
+ *         password_hash:
+ *           type: string
+ *         permissions:
+ *           type: array
+ *           items:
+ *             type: string
+ *         status:
+ *           $ref: '#/components/schemas/UserStatus'
+ *         created_at:
+ *           type: string
+ *           format: date-time
+ *         updated_at:
+ *           type: string
+ *           format: date-time
+ *       required:
+ *         - id
+ *         - name
+ *         - email
+ *         - mobile_no
+ *         - password_hash
+ *         - status
+ */
+/**
+ * @swagger
+ * components:
+ *   schemas:
+ *     UserResponseModel:
+ *       type: object
+ *       properties:
+ *         id:
+ *           type: integer
+ *         name:
+ *           type: string
+ *         email:
+ *           type: string
+ *         mobile_no:
+ *           type: string
+ *         permissions:
+ *           type: array
+ *           items:
+ *             type: string
+ *         status:
+ *           $ref: '#/components/schemas/UserStatus'
+ *         created_at:
+ *           type: string
+ *           format: date-time
+ *         updated_at:
+ *           type: string
+ *           format: date-time
+ *       required:
+ *         - id
+ *         - name
+ *         - email
+ *         - mobile_no
+ *         - status
+ */
+
 export enum UserStatus {
     Active = 'active',
     Inactive = 'inactive',
